--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,29 @@
 body{
     background-color: #fff;
 }
+.loader {
+    width: 100%;
+    height: 100%;
+    background-color: #1A3350;
+    position: fixed;
+    z-index: 100;
+}
+.loader .load img{
+    display: flex;
+    justify-content: center;
+    margin: 20% auto;
+    animation: color 1s linear infinite;
+}
+@keyframes color {
+    0% {
+        filter: grayscale(100%);
+        transform: scale(1.2);
+    }
+    100% { 
+        filter: none;
+        transform: scale(1);
+    }
+  }
 
 /* Shrink Navbar logo when scrolling */
 header {
@@ -16,7 +39,7 @@ header {
     background-color: #1A3350 !important;
 }
 #navlogo a {
-    color: #fff;
+    color: #fff; 
 }
 .shrink {
     position: fixed;
@@ -34,6 +57,7 @@ header {
 #navbar {
     padding: 2px 2px;
     background-color: #132132 !important;
+    border-top: rgb(20, 20, 20) solid 1px; 
 
 }
 #navbar a {
